<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    card_view:cardCornerRadius="4dp">

    <LinearLayout android:id="@+id/linear_container_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/avatar_iv"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:layout_gravity="center_vertical"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/repo_id_tv"
                tools:text="@string/repo_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/repo_name_tv"
                tools:text="@string/repo_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/author_name_tv"
                android:text="@string/author_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/forks_count_tv"
                android:text="@string/forks_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="16sp"
                android:drawablePadding="8dp"
                card_view:drawableStartCompat="@drawable/ic_git_branch" />

            <TextView
                android:id="@+id/starts_count_tv"
                android:text="@string/starts_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="16sp"
                android:drawablePadding="8dp"
                card_view:drawableStartCompat="@drawable/ic_star" />

            <TextView
                android:id="@+id/position_tv"
                android:text="@string/position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>